--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,15 @@ ifeq ($(CONFIG_BOSCH_ICCOM_DEBUG), y)
     ccflags-y += -DICCOM_DEBUG_PACKAGES_PRINTOUT_MAX_COUNT=$(CONFIG_BOSCH_ICCOM_DEBUG_PACKAGES_PRINTOUT_MAX_COUNT)
 endif
 
+# ICCom consumer data delivery work queue configuration
+ifeq (${CONFIG_BOSCH_ICCOM_WORKQUEUE_MODE}, "SYSTEM")
+    ccflags-y += -DICCOM_WORKQUEUE_MODE=ICCOM_WQ_SYSTEM
+else ifeq (${CONFIG_BOSCH_ICCOM_WORKQUEUE_MODE}, "SYSTEM_HIGHPRI")
+    ccflags-y += -DICCOM_WORKQUEUE_MODE=ICCOM_WQ_SYSTEM_HIGHPRI
+else ifeq (${CONFIG_BOSCH_ICCOM_WORKQUEUE_MODE}, "PRIVATE")
+    ccflags-y += -DICCOM_WORKQUEUE_MODE=ICCOM_WQ_PRIVATE
+endif
+
 obj-$(CONFIG_BOSCH_ICCOM) += iccom.o
 ifeq ($(CONFIG_BOSCH_ICCOM_TEST_MODULE), y)
     obj-m += iccom_test.o
