Implement the Dummy Transport for ICCOM
* Adapt the iccom to be a platform driver and
  add possibility to add new iccom devices
  via sysfs
* Add the dummy transport platform driver and
  add the possibility to add new dummy transport
  via sysfs
* Add a linking between iccom and dummy transport
  device via sysfs
* Added python script for testing the linkage of
  the two devices
* Implement the full duplex interface in the dummy
  transport device

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 # vim swap files
 *.swo
 *.swp
+
+# kernel build files
+*.ko
+*.o
+*.cmd
+*.symvers
+*.o.d
+*.o.cmd
+*.order
+*.ko.cmd
+*.mod
+*.mod.c
+
+# python files
+__pycache__
