[Feature] Implementation of missing functionalities
* Whenever socket received data generic callback shall
  be called and the iccom socket device that shall transmit
  the data down to iccom shall be found and used accordingly
* Tests have been adapted and added more coverage to iccom sockets
  so that it is catching regressions
* Added device tree iccom socket definition with phandle for iccom
  which is validated on ARM qemu booting and executing the test
* Dockerfile updated for ARM qemu testing

--- a/device_tree/versatile-pb_iccom.dts
+++ b/device_tree/versatile-pb_iccom.dts
@@ -19,6 +19,12 @@
 		stdout-path = &uart0;
 	};
 
+	iccomsk0: iccomsk0 {
+			compatible = "iccom_socket_if";
+			iccom_dev = <&iccom0>;
+			protocol_family = <22>;
+	};
+
 	iccom0: iccom0 {
 			compatible = "iccom";
 			transport_dev = <&fd_test_transport0>;
