[iccom_tty] ICCom TTY driver
* The ICCom TTY device.
* Defined and configured in the Device Tree.
* Represents an ordinary TTY device, but works on top of the
  configured ICCom channel (as configured in DT).
* Writing to this device will lead the message to be sent via
  configured ICCom channel,
* reading from this device will attempt to read the message from
  the configured ICCom channel.
* Documentation added.
* Tests added and green.
* Not-Applicable test indication was added to allow to skip some
  not-applicable tests without failing overall result.

--- a/device_tree/ast2500.dts
+++ b/device_tree/ast2500.dts
@@ -19,6 +19,13 @@
 			transport_dev = <&fd_test_transport0>;
 	};
 
+	ictty0: ictty0 {
+			compatible = "iccom_tty";
+			iccom_dev = <&iccom0>;
+			channel = <17435>;
+			tty_number= <4>;
+	};
+
 	fd_test_transport0: fd_test_transport0 {
 			compatible = "fd_test_transport";
 	};
