--- a/Kconfig
+++ b/Kconfig
@@ -23,6 +23,18 @@ config BOSCH_ICCOM_SOCKETS
 
         If unsure, say N.
 
+config BOSCH_ICCOM_TTY
+    tristate "Inter Chip communication bus based TTY driver"
+    depends on BOSCH_ICCOM
+    default y
+    ---help---
+        The module provides ability to tunnel the serial (UART)
+        stream through ICCom (each TTY device using a separate
+        ICCom channel). So the remote serial device (connected
+        to remote CPU) will look like local TTY device.
+
+        If unsure, say N.
+
 config BOSCH_ICCOM_TEST_MODULE
     bool "Build test module for Bosch ICCom driver"
     depends on BOSCH_ICCOM && BOSCH_FULL_DUPLEX_MIRROR_DEVICE
